fix: font on mobile fix#2

--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6, p, button, .link-tag {
 	font-size: small;
 
 	@media (min-width: 480px) {
-		font-size: smaller;
+		font-size: small;
 	}
 	@media (min-width: 1024px) {
 		font-size: x-large;
